// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H3: Component should render children when passed in 1`] = `
<h3
  style={
    Object {
      "color": "#a6a7aa",
      "fontFamily": "Inter, Arial, Helvetica, sans-serif",
      "fontSize": "18px",
      "fontWeight": 600,
    }
  }
>
  Super title
</h3>
`;

exports[`H3: Component should render correctly 1`] = `
<h3
  style={
    Object {
      "color": "#a6a7aa",
      "fontFamily": "Inter, Arial, Helvetica, sans-serif",
      "fontSize": "18px",
      "fontWeight": 600,
    }
  }
/>
`;

exports[`H3: Component should render with custom styles 1`] = `
<h3
  style={
    Object {
      "color": "blue",
      "fontFamily": "Inter, Arial, Helvetica, sans-serif",
      "fontSize": "18px",
      "fontWeight": 600,
    }
  }
>
  Blue title
</h3>
`;
